style.css
body {
    font: 100%/1.5 system-ui;
}

.form-list {
    width: 80%;
    display: flex;
    flex-direction: column;
}

.form-row {
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-bottom: 2%;
}

.row {
    display: flex;
    flex-direction: row;
}

.column {
    display: flex;
    flex-direction: column;
}

label {
    width: 20%;
}

input {
    width: 80%;
    border-radius: 2px;
}

textarea {
    width: 80%;
    border-radius: 2px;
}

h1, h2, h3, h4, ol, p {
    margin: 0px
}

time {
    font-size: 2.5vh
}

